--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/jsonwebtoken": "^8.5.9",
+		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
+		"joi": "^17.6.2",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.6.5"
 	},
 	"scripts": {
