--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"devDependencies": {
 		"@types/express": "^4.17.14",
 		"@types/node": "^18.8.3",
+		"@types/nodemailer": "^6.4.6",
 		"axios": "^1.1.2",
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
@@ -19,7 +20,8 @@
 		"express": "^4.18.1",
 		"joi": "^17.6.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.6.5"
+		"mongoose": "^6.6.5",
+		"nodemailer": "^6.8.0"
 	},
 	"scripts": {
 		"dev": "nodemon --watch src -e ts --exec node --inspect -r ts-node/register src/server.ts"
